test/corpus/basic.txt
================================================================================
Simple direnv commands
================================================================================

has git
dotenv
use nix
--------------------------------------------------------------------------------

(program
  (direnv_command_func
    (direnv_command
      (word)))
  (direnv_path_func)
  (direnv_use_func
    (direnv_use_command
      (word))))
