test/corpus/variable_assignment.txt
================================================================================
Simple variable assignment
================================================================================

FOO=bar

--------------------------------------------------------------------------------

(program
  (variable_assignment
    name: (variable_name)
    value: (word)))

================================================================================
Quoted variable assignment
================================================================================

FOO="bar"

--------------------------------------------------------------------------------

(program
  (variable_assignment
    name: (variable_name)
    value: (string)))

================================================================================
Empty variable assignment
================================================================================

FOO=

--------------------------------------------------------------------------------

(program
  (variable_assignment
    name: (variable_name)))
